# virtual-camera

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README.md  akvc_root_build_backend.py  build_support.py  main.py  pyproject.toml  pytest.ini  setup.py
.claude/: CLAUDE.md
.claude/plans/: cpp-rewrite.md  m6-m7-migration.md
.claude/rules/: acceptance.md  build-loop.md  debugging.md  macos.md  virtual-camera.md  workflow.md
.github/workflows/: macos.yml
akvc/: __init__.py  distribution.py  helper_service.py  runtime.py  windows_runtime.py
akvc/sdk/: __init__.py  virtual_camera.py
apps/cli/: README.md  pyproject.toml
apps/cli/akvc_cli/: __init__.py  __main__.py
apps/desktop/: README.md  main.py  pyproject.toml
apps/desktop/akvc_app/: __init__.py  __main__.py  compat_cli.py
apps/desktop/akvc_app/services/: app_logging.py  facade.py  helper_service.py  runtime_host.py  source_info.py  windows_runtime.py
apps/desktop/akvc_app/viewmodels/: main_vm.py
apps/desktop/akvc_app/views/: main_window.py
apps/desktop/akvc_app/workers/: frame_worker.py  source_provider.py
camera-core/: CMakeLists.txt  README.md  build_support.py  pyproject.toml  setup.py
camera-core/bindings/python/: module.cpp
camera-core/include/akvc/: frame_input.h  pipeline_ops.h  pixel_format.h  status.h  virtual_camera.h
camera-core/include/akvc/platform/macos/: macos_session.h
camera-core/include/akvc/platform/windows/: framebus_producer.h  helper_client_runtime.h  windows_session.h
camera-core/native/: CMakeLists.txt
camera-core/native/include/akvc/core_native/: bindings.h  frame_types.h
camera-core/native/src/: frame_types.cpp  metrics.cpp  module.cpp  pipeline_ops.cpp  protocol.cpp  runtime_host.cpp  virtual_camera_session.cpp
camera-core/native/src/helper/: windows_helper_client.cpp
camera-core/native/src/providers/: provider_factory.cpp  test_pattern_provider.cpp  usb_provider.cpp
camera-core/native/src/sinks/: macos_shm_sink.cpp  windows_framebus.cpp
camera-core/src/: format_status.cpp  pipeline_ops.cpp  virtual_camera.cpp
camera-core/src/akvc/: __init__.py  runtime.py
camera-core/src/akvc/core/: __init__.py  errors.py  frame.py  logging.py  metrics.py  py.typed
camera-core/src/akvc/core/config/: __init__.py  schema.py
camera-core/src/akvc/core/frame_pipeline/: __init__.py  color_convert.py  fps_regulator.py  pipeline.py  resize.py
camera-core/src/akvc/core/frame_provider/: __init__.py  base.py  test_pattern.py  usb.py
camera-core/src/akvc/core/frame_sink/: __init__.py  _protocol.py  base.py  macos_shm.py  windows_shm.py
camera-core/src/akvc/core/helper/: client.py
camera-core/src/akvc/sdk/: virtual_camera.py
camera-core/src/platform/macos/: VERIFY_MACOS.md  macos_session.mm  system_extension_control.mm
camera-core/src/platform/windows/: framebus_producer.cpp  helper_client_runtime.cpp  windows_session.cpp
camera-core/tests/: test_pipeline_ops.cpp  test_virtual_camera.cpp  test_windows_session.cpp
docs/: ai-workflow.md  integration-guide.md
docs/architecture/: cross_platform_app_integration.md  windows_macos_integration_matrix.md
docs/benchmark/: macos_virtual_camera_benchmark.md
docs/macos/: app_install_activation_state_machine.md  architecture.md  build.md  demo_app.md  demo_app_design.md  embed_host_refactor_plan.md  install.md  manual_acceptance.md  manual_validation_results.example.json  signing.md  task-breakdown.md  troubleshooting.md
docs/operations/: troubleshooting.md
docs/phase0/: architecture-research.md  risk-analysis.md  technology-selection.md
docs/phase1/: class-diagram.md  component-diagram.md  sequence-diagram.md  system-design.md
docs/phase2/: build-guide.md  implementation-plan.md  run-debug-guide.md  verification-plan.md
docs/phase3/: native-usb-capture-design.md  verification-plan.md
docs/phase4/: build-guide.md  implementation-plan.md  run-debug-guide.md  signing-notarization.md  verification-plan.md
docs/research/: macos_virtual_camera_research.md
installer/macos/: build_dmg.sh  build_pkg.sh  build_zip.sh  common.sh  notarize.sh  sign_app.sh  staple.sh  uninstall.sh
jenkins/: macos.Jenkinsfile
tests/: __init__.py
tools/: macos_app_matrix_contract.py  macos_benchmark.py  macos_build_contract.py  macos_capability_contract.py  macos_ci_artifact_contract.py  macos_delivery_gate_contract.py  macos_direct_push_demo.py  macos_direct_sender_object_demo.py  macos_distribution_contract.py  macos_entrypoints_contract.py  macos_framebus_contract.py  macos_framebus_roundtrip.py  macos_input_contract.py  macos_install_session.py  macos_list_devices_binary_check.py  macos_native_verify.py  macos_readiness_contract.py  macos_release_diagnostics.py  macos_sdk_contract.py  macos_signing_pipeline_contract.py  macos_smoke.py  macos_status_binary_check.py  macos_status_contract.py  macos_stream_contract.py  macos_toolchain_preflight.py  macos_topology_contract.py  macos_validation_report.py  macos_validation_session.py  macos_validation_session_acceptance.py  macos_validation_session_acceptance_contract.py  macos_validation_session_artifact_check.py  macos_validation_session_contract.py  macos_validation_session_summary.py  macos_validation_session_summary_contract.py  make.py  mf_register_test.cpp  mf_test.cpp  nuitka_host.entitlements  package_nuitka.py  pyside6_virtual_camera_demo.py  (+1 more)
virtualcam/windows/dshow/: CMakeLists.txt
virtualcam/windows/dshow/include/: cvcam_filter.h  cvcam_stream.h
virtualcam/windows/dshow/resources/: akvc.def  akvc.rc
virtualcam/windows/dshow/src/: cvcam_filter.cpp  cvcam_stream.cpp  dll_main.cpp  registry.cpp
virtualcam/windows/framebus/: CMakeLists.txt
virtualcam/windows/framebus/include/akvc/: framebus.h
virtualcam/windows/framebus/src/: framebus.cpp  sddl_helper.cpp
virtualcam/windows/helper/: CMakeLists.txt
virtualcam/windows/helper/include/akvc/: helper.h
virtualcam/windows/helper/src/: main.cpp
virtualcam/windows/mf/: CMakeLists.txt
virtualcam/windows/mf/include/akvc/: mf_source.h
virtualcam/windows/mf/src/: mf_source.cpp
(+156 files in other folders)
