# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=70.1", "wheel", "pybind11>=2.12", "numpy>=1.26,<3.0"]
build-backend = "akvc_root_build_backend"
backend-path = ["."]

[project]
name = "akvc-core"
version = "0.2.0"
description = "AK Virtual Camera - C++ control layer + native driver (workspace root)"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "AK Virtual Camera Authors" }]
dependencies = [
    "numpy>=1.26,<3.0",
    "opencv-python-headless>=4.9,<5.0",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.26,<3.0",
    "opencv-python-headless>=4.9,<5.0",
    "pydantic>=2.5,<3.0",
    "PySide6>=6.6,<7",
    "pytest>=8.1",
    "pybind11>=2.12",
]

[tool.uv]
package = false
