# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akvc-cli"
version = "0.2.0"
description = "AK Virtual Camera — CLI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "AK Virtual Camera Authors" }]
dependencies = [
    "akvc-core==0.2.0",
]

[project.scripts]
akvc = "akvc_cli.__main__:main"

[tool.setuptools.packages.find]
include = ["akvc_cli*"]
