# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akvc-desktop"
version = "0.2.0"
description = "AK Virtual Camera — desktop application (PySide6, MVVM)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "AK Virtual Camera Authors" }]
dependencies = [
    "PySide6>=6.6,<6.9",
    "akvc-core==0.2.0",
]

[project.scripts]
akvc-desktop = "akvc_app.__main__:main"

[tool.setuptools.packages.find]
include = ["akvc_app*"]
